deployment/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vidnet
  labels:
    name: vidnet
    environment: production
